frontend/styles/globals.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
  monospace;
}

.source {
  font-style: italic;
  font-size: smaller;
  margin-top: 5pt;
}

.source-span {
  font-style: italic;
  font-size: smaller;
  display: inline;
}

.undefWord {
  text-decoration: underline dashed;
  cursor: pointer;
}

.inlineButtonLink {
  font-size: smaller;
}

.inlineButton {
  border-style: none;
  background-color: transparent;
  padding: 0;
  text-decoration: underline;
  color: blue;
  cursor: pointer;
}

.inlineButtonNormal {
  font-size: medium;
}

.inlineButtonActive {
  font-weight: bold;
}

.errorText {
  color: red
}

.iconWithMargin {
  margin-left: 2px;
  cursor: pointer;
}

.iconWithMarginRight {
  margin-right: 5px;
  cursor: pointer;
}

.stressed {
  text-decoration: underline;
  font-weight: bold;
}

.richTextEmph {
  font-weight: bold;
}

.richTextTooltip {
  text-decoration: underline dotted;
}

.tableWithBorders {
  border-collapse: collapse;
}

.tableWithBorders tr {
  padding: 0;
  margin: 0;
}

.tableWithBorders td, .tableWithBorders th {
  border: 1px solid black;
  padding: 5px;
}

.phonemeTable {
  text-align: center;
}

.footer {
  font-size: smaller;
  margin-top: 10pt;
}

.newWord {
  font-size: x-small;
  margin-left: 5pt;
  padding: 2px;
  background: green;
  color: white;
}

.wordDefinitions {
  margin-left: 5pt;
  font-size: small;
}

.inputAssist {
  padding-left: 10pt;
}

.inputAssistButton {
  font-size: medium;
  padding-left: 1pt;
  padding-right: 1pt;
}

.glossAbbreviation {
  font-variant: small-caps;
}

.formRow {
    font-size: medium;
}

.uiTextArea {
  font-size: medium;
}

.ruleComment {
  font-style: italic;
  margin-top: 1em;
}

.richTextMono {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
  monospace;
  font-size: 10pt;
}

.ruleTrace {
  white-space: pre;
}

.languageSettings {
  white-space: pre;
}

.contextGloss {
  font-style: italic;
  font-size: smaller;
}

.paradigmRuleLink {
  font-size: small;
}

.corpusTextWord {
  display: inline-block;
  padding: 5px;
  vertical-align: top;
}

.derivationLinkChain {
  display: inline;
}

.ruleReport {
  margin-top: 5pt;
  margin-bottom: 10pt;
}

thead {
  font-weight: bold;
}

.reportRichText {
  font-size: 11pt;
}

.uiButtonSubmit {
  font-size: small;
  margin: 10px 5px;
  border: 1px solid transparent;
  border-radius: 5px;
  background-color: #007aff;
  color: white;
}

.uiButton {
  font-size: small;
  margin: 10px 5px;
  border: 1px solid transparent;
  border-radius: 5px;
  background-color: #e8e8e8;
}

.uiButton:hover {
  border-color: black;
}

.uiButtonSubmit:hover {
  border-color: black;
}

h4 {
  margin-bottom: 5pt;
}

